--- a/WebApplication6/Pages/Privacy.cshtml
+++ b/WebApplication6/Pages/Privacy.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h2>@ViewData["Title"]</h2>
+    <div class="menu">
+        <h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+        <p>Use this page to detail your site's privacy policy.</p>
+    </div>
