--- a/WebApplication6/Pages/Shared/_Layout.cshtml
+++ b/WebApplication6/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,12 @@
     </nav>
 
     <div id="mySidenav" class="sidenav">
-        <a href="#">Profile</a>
-        <a href="#">History</a>
-        <a href="#">Settings</a>
-        <a href="#">Privacy</a>
+        <a asp-page="./Index">Home</a>
+        <a asp-page="./Profile">Profile</a>
+        <a asp-page="./History">History</a>
+        <a asp-page="./Settings">Settings</a>
+        <a  asp-page="./Privacy">Privacy</a>
+        <a asp-page="./Contact">Contact</a>
     </div>
 
     <script>
