--- a/WebApplication6/wwwroot/css/site.css
+++ b/WebApplication6/wwwroot/css/site.css
@@ -6,6 +6,7 @@ body {
     background-color: #424141;
     font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
+    
 }
 
 /* Wrapping element */
@@ -39,9 +40,17 @@ body {
     }
 }
 
-div.request {
-    padding-top: 20px;
+div.menu{
+    padding-top:20px;
     padding: 10px;
+    background-color: #525252;
+    color: white;
+    border-radius: 20px;
+}
+
+div.request {
+    padding-top: 1%;
+    padding: 1.5%;
     background-color: #171717;
     color: white;
     
@@ -56,7 +65,7 @@ button.request {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    max-width: 180px;
+    max-width: 25%;
     
 }
 
@@ -68,7 +77,7 @@ button.request {
     border-radius: 50%;
     width: 66px;
     height: 66px;
-    margin-left: 120px;
+    margin-left: 10%;
    
 }
 
