Fixed Scaling issues
Remove annoying side margin
Scaled more items
Positioned request bar correctly

--- a/WebApplication6/Pages/Index.cshtml
+++ b/WebApplication6/Pages/Index.cshtml
@@ -6,7 +6,9 @@
 
     <body onload="getLocation()">
 
-        <div id="dvMap" style="width: 500px; height: 500px">
+
+
+        <div id="dvMap" style="width: 500px; height: 500px; position:center; ">
         </div>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUFfM7kjpc6tQgaKEQqjVZCrq5Wp0IKWg&v=3.27"></script>
         <script type="text/javascript">
@@ -54,15 +56,15 @@
                     "<br>Longitude: " + position.coords.longitude;
             }
         </script>
-        
+
         <div class="request">
-           
-                Estimated Time:
-                <br />
-                Estimated Price
-                 
-                <button class="request"><b>Request Ride</b></button>
-            
+
+            Estimated Time:
+            <br />
+            Estimated Price
+
+            <button class="request"><b>Request Ride</b></button>
+
         </div>
-         
+
     </body>
