--- a/WebApplication6/Pages/Profile.cshtml
+++ b/WebApplication6/Pages/Profile.cshtml
@@ -8,5 +8,13 @@
         <h3>@Model.Message</h3>
 
         <p>PROFILE PAGE!</p>
+
+        <img src="~/images/user.png"  style="max-width: 10%; max-height: 10%; border-radius:50%;"/>
+        Firstname Surname
+        <br />
+        User Type
+        <br />
+        Rating 5*
+
     </div>
 
