--- a/WebApplication6/wwwroot/css/site.css
+++ b/WebApplication6/wwwroot/css/site.css
@@ -1,11 +1,11 @@
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    
     background-color: #424141;
     font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
+    width: 100%;
     
 }
 
@@ -49,23 +49,29 @@ div.menu{
 }
 
 div.request {
-    padding-top: 1%;
-    padding: 1.5%;
+   
     background-color: #171717;
     color: white;
+    position: fixed;
+    position: absolute;
+    bottom:0px;
+    width: 100%;
+    padding-bottom: 2.5%;
+    padding-left: 10%;
+    
     
 }
 
 button.request {
-    width: 100%;
+    
     background-color: #fcfcfc;
     color: black;
     padding: 14px 20px;
-    margin: 8px 0;
+    position:center;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    max-width: 25%;
+    max-width: 33%;
     
 }
 
@@ -131,4 +137,6 @@ button.request {
             font-size: 18px;
         }
 }
+
+
 
