Almost fixed layout issues
Actually fixed scrolling on home page
Added theme-color which SHOULD change the address bar on mobile browsers if site has valid certificate
Tried to put request driver button in line with quote

--- a/WebApplication6/Pages/Shared/_Layout.cshtml
+++ b/WebApplication6/Pages/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ff6200" >
     <title>@ViewData["Title"] - Hull Car Pool</title>
 
     <environment include="Development">
@@ -19,7 +20,7 @@
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <input type="image" src="~/images/user.png" alt="icon" class="userIcon" onclick="openNav()">
-
+        
     </nav>
 
     <div id="mySidenav" class="sidenav">
