--- a/WebApplication6/Pages/Index.cshtml
+++ b/WebApplication6/Pages/Index.cshtml
@@ -40,9 +40,7 @@
         </script>
 
         <script>
-            targetElement.ontouchend = (e) => {
-                e.preventDefault();
-            };
+           document.body.addEventListener('touchmove', function(e){ e.preventDefault(); }, { passive: false });
         </script>
 
         <script>
@@ -63,13 +61,16 @@
             }
         </script>
 
-        <div class="request">
-
-            Estimated Time:
-            <br />
-            Estimated Price
-
-            <button class="request"><b>Request Ride</b></button>
+        <div class="request" >
+            <div align="left">
+                Estimated Time:
+                <br />
+                Estimated Price: £
+            </div>
+            <div align="right" >
+                <button class="request"><b>Request Ride</b></button>
+            </div>
+            
 
         </div>
 
