--- a/WebApplication6/wwwroot/css/site.css
+++ b/WebApplication6/wwwroot/css/site.css
@@ -51,20 +51,20 @@ div.menu{
     background-color: #525252;
     color: white;
     border-radius: 20px;
+    margin-left:5%;
+    margin-right:5%;
 }
 
 div.request {
-   
     background-color: #171717;
     color: white;
     position: fixed;
     position: absolute;
-    bottom:0px;
+    bottom: 0px;
     width: 100%;
     padding-bottom: 2.5%;
     padding-left: 10%;
-    
-    
+    padding-right: 10%;
 }
 
 button.request {
@@ -72,11 +72,13 @@ button.request {
     background-color: #fcfcfc;
     color: black;
     padding: 14px 20px;
-    position:center;
+    
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    max-width: 33%;
+    max-height:15%;
+    max-width: 40%;
+    display:inline-block;
     
 }
 
