--- a/CarPoolSite/css/loginform.css
+++ b/CarPoolSite/css/loginform.css
@@ -26,7 +26,7 @@ img.loginbuttons{
     
 }
 
-input.loginbuttons {
+button.loginbuttons {
     display: table;
     margin: 0 auto;
     margin-bottom: 4px;
@@ -40,7 +40,7 @@ input.loginbuttons {
     height: 40px;
     
 }
-    input.loginbuttons:hover {
+    button.loginbuttons:hover {
         background-color: #757575;
     }
 
@@ -58,7 +58,7 @@ input.login {
 
 select.login {
     display: block;
-    margin-left: 50%;
+    
 }
 
 div.login {
