--- a/CarPoolSite/css/loginform.css
+++ b/CarPoolSite/css/loginform.css
@@ -26,6 +26,24 @@ img.loginbuttons{
     
 }
 
+.imagebutton {
+    vertical-align: middle;
+    border-radius: 8px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: inline-block;
+    float: left;
+    margin: 15px;
+    max-height: 400px;
+    max-width: 400px;
+    height: auto;
+    width: auto;
+}
+
+    .imagebutton:hover {
+        opacity: 0.8;
+        color: white;
+    }
+
 button.loginbuttons {
     display: table;
     margin: 0 auto;
