--- a/CarPoolSite/css/site.css
+++ b/CarPoolSite/css/site.css
@@ -241,3 +241,30 @@ nav.topbar{
 }
 
 
+.notification {
+    margin-left: 60%;
+    
+    background-color: #555;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    position: relative;
+    display: inline-block;
+    border-radius: 4px;
+}
+
+    .notification:hover {
+        background: red;
+    }
+
+    .notification .badge {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        padding: 5px 10px;
+        border-radius: 50%;
+        background: red;
+        color: white;
+    }
+
+
